--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -3,6 +3,22 @@
     line-height: 1.4;
     font-weight: 600;
 }
+.resume-section-content p{font-size:14px;font-weight: normal;color:#000;margin:8px 0 5px 0!important;}
+.resume-timeline-item-header{margin-bottom: 0 !important;}
+h3.mtxt{color:#000;margin-bottom: 0 !important;}
+.resume-position-time.mtxt{color:#8f8f8f;text-shadow: none;font-weight: normal;font-size:13px;margin-bottom: 20px;}
+h4.resume-timeline-item-desc-heading{font-size:13px;color:#555;font-weight: normal;}
+li.mtxt{font-weight: normal;font-size:13px;line-height: 1.8em;color:#555;}
+.badge{font-weight: normal;}
+.list-inline{display:flex;gap:5px;}
+.list-inline-item{display:block;margin:0 !important;}
+.resume-skills-cat{color:#000;}
+.resume-degree{font-size:16px;margin-bottom:10px;font-weight: bold;color:#000;}
+.resume-degree-org{font-size:13px;color:#555;}
+.resume-degree-time{font-size:13px;color:#555;}
+.list-unstyled li{margin-bottom: 3px !important;color:#555;font-size:13px;color:#555;}
+.resume-timeline-item-desc ul.list-achieve{padding-left:20px;}
+.list-inline{margin-bottom:3px;}
 @media (max-width: 383px){
     .other{
         flex-direction: column;
