feat: update resume

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -31,3 +31,4 @@ li.mtxt{font-weight: normal;font-size:13px;line-height: 1.8em;color:#555;}
         margin-left:1.2rem;
     }
 }
+.resume-section-content {margin-bottom: 20px}
